[package]
name = "legbone"
version = "0.1.0"
authors = ["Ricardo"]
edition = "2021"
rust-version = "1.75"

[dependencies]
log = "0.4"
env_logger = "0.10"
num_enum = "0.7"
crossbeam-queue = "0.3"
flume = "0.11"
byteorder = "1.5"
futures = "0.3"
anyhow = "1.0"
toml = "0.8"
serde = "1.0"
serde_derive = "1.0"

[dependencies.async-std]
version = "1.12"
features = ["attributes", "unstable"]

[dependencies.clap]
version = "4.4"
features = ["derive"]
