[package]
name = "legbone"
version = "0.1.0"
authors = ["Ricardo"]
edition = "2024"
rust-version = "1.85"

[dependencies]
log = "0.4"
env_logger = "0.11"
num_enum = "0.7"
crossbeam-queue = "0.3"
flume = "0.11"
byteorder = "1.5"
futures = "0.3"
anyhow = "1.0"
toml = "0.9"
serde = "1.0"
serde_derive = "1.0"
async-std = { version = "1.13", features = ["attributes", "unstable"] }
clap = { version = "4.5", features = ["derive"] }
