[package]
name = "legbone"
version = "0.2.0"
authors = ["Ricardo"]
edition = "2024"
rust-version = "1.85"

[dependencies]
log = "0.4"
env_logger = "0.11"
num_enum = "0.7"
crossbeam-queue = "0.3"
anyhow = "1.0"
toml = "0.9"
serde = "1.0"
serde_derive = "1.0"
tokio = { version = "1", features = [ "net", "io-util", "rt-multi-thread", "macros" ] }
tokio-stream = { version = "0.1", features = [ "net"] }
clap = { version = "4.5", features = ["derive"] }
